--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "lodash": "^3.10.1",
     "materialize-css": "^0.98.2",
