--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery-ui-bundle": "^1.12.1",
     "lodash": "^3.10.1",
     "materialize-css": "^0.98.2",
+    "moment": "^2.18.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
